# gkm_tl

./: .gitignore  .gitmodules  README.md  config.yaml  config.yaml.example  pyproject.toml  run.py
.github/workflows/: nightly.yml
docs/: design.md
docs/plans/: 2026-06-26-gkm-tl-implementation.md
lib/: config.py  llm_backend.py  octo.py  parser_generic.py  parser_localization.py  parser_master.py  parser_resource.py  text_utils.py
lib/proto/: octodb_pb2.py
stages/: 01_download.py  02_extract.py  03_translate.py  04_build.py  05_package.py
tests/: test_regressions.py
tools/: export_changed.py  export_pending.py
