[project]
name = "gkm-tl"
version = "0.1.0"
description = "Gakumasu game text auto-translation tool: download, diff, LLM translate, and build translation packages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=49.0.0",
    "ruamel.yaml>=0.18.0",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
    "protobuf>=4.25.0",
]
